--- a/app/views/flights/_search.html.erb
+++ b/app/views/flights/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(url: flights_index_path, method: "get") do %>
+<%= form_with(url: flights_index_path, method: "get", local: true) do %>
       <%= label_tag(:origin, "From: ") %>
       <%= select_tag(:origin, options_for_select(@airport_options)) %></br>
       <%= label_tag(:destination, "To: ") %>
